--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "body-parser": "^1.18.3",
     "cors": "^2.8.4",
     "express": "^4.16.3",
+    "joi": "^13.6.0",
     "morgan": "^1.9.1",
     "sequelize": "^4.39.0",
     "sqlite": "^3.0.0"
